--- a/index.html
+++ b/index.html
@@ -4,28 +4,47 @@
     <meta charset="UTF-8">
     <script src="https://unpkg.com/@owlbear-rodeo/sdk"></script>
     <style>
+        /* Главный секрет: жестко ограничиваем ширину, но даем контенту высоту */
         html, body { 
-            width: 100%; 
-            height: 100%; 
-            margin: 0; padding: 0;
+            width: 320px; 
             background: #242424; 
             color: #eee;
-            font-family: sans-serif;
+            font-family: 'Segoe UI', sans-serif;
+            margin: 0; padding: 0;
             overflow: hidden;
         }
-        .wrapper {
-            display: flex; flex-direction: column;
-            height: 100vh; padding: 12px; box-sizing: border-box;
+
+        .main-container {
+            display: flex;
+            flex-direction: column;
+            /* Мы заставляем контейнер быть ВЫСОКИМ изначально */
+            height: 800px; 
+            padding: 15px;
+            box-sizing: border-box;
         }
-        .header { font-size: 10px; text-transform: uppercase; color: #666; text-align: center; margin-bottom: 8px; }
+
+        .header { font-size: 10px; text-transform: uppercase; color: #666; text-align: center; margin-bottom: 10px; }
+        
         .controls { display: flex; align-items: center; justify-content: center; gap: 10px; background: #1a1a1a; border-radius: 8px; padding: 10px; margin-bottom: 10px; }
         button { cursor: pointer; border: none; border-radius: 6px; color: white; font-weight: bold; }
         .btn-c { width: 40px; height: 40px; background: #333; font-size: 20px; border: 1px solid #444; }
         #countInput { width: 60px; background: #000; border: 1px solid #444; color: #fff; text-align: center; font-size: 22px; font-weight: bold; }
+
         .actions { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; }
         .roll-btn { padding: 12px; font-size: 11px; text-transform: uppercase; }
         .pub { background: #2e7d32; } .priv { background: #c62828; }
-        #log { flex-grow: 1; background: #111; border-radius: 8px; padding: 10px; margin-top: 10px; overflow-y: auto; border: 1px solid #333; }
+
+        #log { 
+            flex: 1; /* Занимает всё оставшееся место */
+            background: #111; 
+            border-radius: 8px; 
+            padding: 10px; 
+            margin-top: 10px; 
+            overflow-y: auto; 
+            border: 1px solid #333;
+            min-height: 500px; /* Принудительно растягиваем лог */
+        }
+        
         .entry { border-bottom: 1px solid #222; padding: 10px 0; }
         .name-tag { font-size: 11px; color: #5c6bc0; font-weight: bold; text-transform: uppercase; }
         .hit-badge { background: #2e7d32; color: white; padding: 3px 10px; border-radius: 4px; font-weight: bold; display: inline-block; margin: 5px 0; }
@@ -34,8 +53,8 @@
     </style>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="header">P&P Roller v1.7</div>
+    <div class="main-container">
+        <div class="header">P&P Roller v1.8</div>
         <div class="controls">
             <button class="btn-c" onclick="ch(-1)">−</button>
             <input type="number" id="countInput" value="1" min="1">
@@ -50,12 +69,16 @@
 
     <script>
         const input = document.getElementById('countInput');
-        const h = 800; // Целевая высота
+        const targetHeight = 800;
 
         function ch(v) { input.value = Math.max(1, (parseInt(input.value) || 1) + v); }
 
-        function setSize() {
-            try { OBR.viewport.setHeight(h); } catch(e){}
+        function syncSize() {
+            try {
+                // Пытаемся установить высоту и для вьюпорта, и для самого окна
+                OBR.viewport.setHeight(targetHeight);
+                OBR.action.setHeight(targetHeight); 
+            } catch(e) {}
         }
 
         async function rk(isHidden) {
@@ -69,7 +92,7 @@
             let pName = "Игрок"; 
             try { pName = await OBR.player.getName(); } catch(e){}
             const data = { name: pName, dice: results, hits: successes, priv: isHidden };
-            if(!isHidden) OBR.broadcast.sendMessage("pnp_v17", data);
+            if(!isHidden) OBR.broadcast.sendMessage("pnp_v1.8", data);
             render(data, true);
         }
 
@@ -80,16 +103,20 @@
             const name = isMine ? (data.priv ? "Вы (Скрыто)" : "Вы") : data.name;
             div.innerHTML = `<div class="name-tag">${name}</div><div class="hit-badge">${data.hits} Успехов</div><div class="dice-grid">${data.dice.map(v => `<div class="die">${v}</div>`).join('')}</div>`;
             log.prepend(div);
-            setSize();
+            syncSize();
         }
 
         OBR.onReady(() => {
-            setSize();
-            // Повторяем попытку несколько раз, чтобы Owlbear точно сдался
-            setTimeout(setSize, 100);
-            setTimeout(setSize, 500);
-            setTimeout(setSize, 1000);
-            OBR.broadcast.onMessage("pnp_v17", e => render(e.data, false));
+            syncSize();
+            // Цикл "насильственного" расширения
+            let attempts = 0;
+            const interval = setInterval(() => {
+                syncSize();
+                attempts++;
+                if (attempts > 10) clearInterval(interval);
+            }, 300);
+
+            OBR.broadcast.onMessage("pnp_v1.8", e => render(e.data, false));
         });
     </script>
 </body>
